--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "Controls"
+name = "controls"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ahrs = { version = "0.7", default-features = false }
