--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 ahrs = { version = "0.7", default-features = false }
+# faer = { version = "0.21", default-features = false}
+nalgebra = { version = "0.33", default-features = false, features = ["libm"]}
+num-traits = { version = "*", default-features = false }
